# supreme-task

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml  run.py
src/supreme_task/: __init__.py  tasks.py
tests/: test_task.py
